--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="phone-container">
-    <img id="phone-frame" src="6.png" alt="Flip Phone Frame">
+    <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame">
   </div>
 
   <script src="script.js"></script>
