--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Sprite animation that plays first -->
+  <img id="sprite" src="" alt="Loading sprite..." />
+
+  <!-- Flip phone container (starts hidden until sprite ends) -->
   <div id="phone-container">
-    <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame">
+    <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame" />
   </div>
 
   <script src="script.js"></script>
