--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Sprite animation that plays first -->
-  <img id="sprite" alt="Loading sprite..." style="visibility: hidden;" />
+  <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." style="visibility: hidden;" />
 
   <!-- Flip phone container (starts hidden until sprite ends) -->
   <div id="phone-container">
