--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Flip phone container (starts hidden until sprite ends) -->
   <div id="phone-container">
-    <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame" />
+    <img id="phone-frame" src="" alt="Flip Phone Frame" />
   </div>
 
   <script src="script.js"></script>
