--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sprite animation that plays first -->
-  <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." style="visibility: hidden;" />
+  <!-- Sprite animation shown first -->
+  <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
 
-  <!-- Flip phone container (starts hidden until sprite ends) -->
-  <div id="phone-container">
-    <img id="phone-frame" src="" alt="Flip Phone Frame" />
+  <!-- Flip phone container (hidden until sprite ends) -->
+  <div id="phone-container" style="display: none;">
+    <img id="phone-frame" alt="Flip Phone Frame" />
   </div>
 
   <script src="script.js"></script>
