--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sprite animation shown first -->
+  <!-- Sprite animation that loops until clicked -->
   <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
 
-  <!-- Flip phone container (hidden until sprite ends) -->
+  <!-- Flip phone container (hidden until sprite is clicked) -->
   <div id="phone-container" style="display: none;">
-    <img id="phone-frame" alt="Flip Phone Frame" />
+    <img id="phone-frame" src="" alt="Flip Phone Frame" />
   </div>
 
   <script src="script.js"></script>
