--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sprite animation (loops until click) -->
-  <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
+  <!-- Sprite animation that plays first -->
+  <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." style="visibility: hidden;" />
 
-  <!-- Flip phone container (hidden at first) -->
-  <div id="phone-container" style="display: none;">
+  <!-- Flip phone container (starts hidden until sprite ends) -->
+  <div id="phone-container">
     <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame" />
+    <div id="click-zone"></div> <!-- Only top part is clickable -->
   </div>
 
   <script src="script.js"></script>
