--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sprite animation that plays first -->
+  <!-- Sprite intro -->
   <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." style="visibility: hidden;" />
 
-  <!-- Flip phone container (starts hidden until sprite ends) -->
+  <!-- Phone container -->
   <div id="phone-container">
     <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame" />
-    <div id="click-zone"></div> <!-- Only top part is clickable -->
+    <div id="click-top"></div>
+    <div id="click-bottom"></div>
   </div>
 
   <script src="script.js"></script>
