--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sprite intro -->
-  <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." style="visibility: hidden;" />
+  <!-- Sprite animation -->
+  <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
 
-  <!-- Phone container -->
+  <!-- Flip phone container -->
   <div id="phone-container">
-    <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame" />
-    <div id="click-top"></div>
-    <div id="click-bottom"></div>
+    <img id="phone-frame" src="images/42.png" alt="Flip Phone Frame" />
   </div>
 
   <script src="script.js"></script>
