--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Flip Phone Animation</title>
+  <title>Flip Phone</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sprite animation -->
-  <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
-
-  <!-- Flip phone container -->
   <div id="phone-container">
-    <img id="phone-frame" src="images/42.png" alt="Flip Phone Frame" />
+    <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame">
+    <img id="sprite-overlay" src="DefineSprite_339/1.png" alt="Sprite Overlay">
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
