--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Flip Phone</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Flip Phone Animation</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="phone-container">
-    <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame">
-    <img id="sprite-overlay" src="DefineSprite_339/1.png" alt="Sprite Overlay">
+    <img id="sprite-intro" src="DefineSprite_22/1.png" alt="Intro Sprite" />
+    <img id="phone-frame" src="images/6.png" alt="Phone Frame" />
+    <img id="sprite-339" src="" alt="Sprite 339" />
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
-
