--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Flip Phone</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Flip Phone Animation</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="phone-container">
-    <img id="sprite" src="DefineSprite_22/1.png" alt="Sprite Intro" />
-    <img id="phone-frame" src="" alt="Phone Frame" />
-    <img id="sprite-overlay" src="DefineSprite_339/1.png" alt="Screen Sprite" />
+    <img id="sprite" src="DefineSprite_22/1.png" alt="Intro Sprite" />
+    <img id="phone-frame" src="images/6.png" alt="Phone Frame" />
+    <img id="overlay-sprite" src="DefineSprite_339/1.png" alt="Screen Sprite" />
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
