--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Flip Phone Animation</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Sprite animation -->
+  <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
+
+  <!-- Flip phone container -->
   <div id="phone-container">
-    <img id="sprite" src="DefineSprite_22/1.png" alt="Intro Sprite" />
-    <img id="phone-frame" src="images/6.png" alt="Phone Frame" />
-    <img id="overlay-sprite" src="DefineSprite_339/1.png" alt="Screen Sprite" />
+    <img id="phone-frame" src="images/42.png" alt="Flip Phone Frame" />
   </div>
 
   <script src="script.js"></script>
