--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <img id="phone-frame" src="images/42.png" alt="Flip Phone Frame" />
   </div>
 
+    <!-- Add buttons over the image -->
+    <button class="phone-button" id="btn1" style="top: 370px; left: 100px;"></button>
+    <button class="phone-button" id="btn2" style="top: 430px; left: 100px;"></button>
+    <!-- Add more buttons if needed -->
+  </div> 
   <script src="script.js"></script>
 </body>
 </html>
