--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
   <!-- Flip phone container -->
   <div id="phone-container">
     <img id="phone-frame" src="images/42.png" alt="Flip Phone Frame" />
+
+    <!-- Keypad buttons -->
+    <button class="phone-button" id="key1" style="top: 410px; left: 38px;"></button>
+    <button class="phone-button" id="key2" style="top: 410px; left: 98px;"></button>
+    <button class="phone-button" id="key3" style="top: 410px; left: 158px;"></button>
+
+    <button class="phone-button" id="key4" style="top: 468px; left: 38px;"></button>
+    <button class="phone-button" id="key5" style="top: 468px; left: 98px;"></button>
+    <button class="phone-button" id="key6" style="top: 468px; left: 158px;"></button>
+
+    <button class="phone-button" id="key7" style="top: 526px; left: 38px;"></button>
+    <button class="phone-button" id="key8" style="top: 526px; left: 98px;"></button>
+    <button class="phone-button" id="key9" style="top: 526px; left: 158px;"></button>
+
+    <button class="phone-button" id="key*" style="top: 584px; left: 38px;"></button>
+    <button class="phone-button" id="key0" style="top: 584px; left: 98px;"></button>
+    <button class="phone-button" id="key#" style="top: 584px; left: 158px;"></button>
   </div>
 
-    <!-- Add buttons over the image -->
-    <button class="phone-button" id="btn1" style="top: 370px; left: 100px;"></button>
-    <button class="phone-button" id="btn2" style="top: 430px; left: 100px;"></button>
-    <!-- Add more buttons if needed -->
-  </div> 
   <script src="script.js"></script>
 </body>
 </html>
