--- a/index.html
+++ b/index.html
@@ -7,31 +7,27 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sprite animation -->
   <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
 
-  <!-- Flip phone container -->
   <div id="phone-container">
     <img id="phone-frame" src="images/42.png" alt="Flip Phone Frame" />
 
     <!-- Keypad buttons -->
-    <button class="phone-button" id="key1" style="top: 410px; left: 38px;"></button>
-    <button class="phone-button" id="key2" style="top: 410px; left: 98px;"></button>
-    <button class="phone-button" id="key3" style="top: 410px; left: 158px;"></button>
-
-    <button class="phone-button" id="key4" style="top: 468px; left: 38px;"></button>
-    <button class="phone-button" id="key5" style="top: 468px; left: 98px;"></button>
-    <button class="phone-button" id="key6" style="top: 468px; left: 158px;"></button>
-
-    <button class="phone-button" id="key7" style="top: 526px; left: 38px;"></button>
-    <button class="phone-button" id="key8" style="top: 526px; left: 98px;"></button>
-    <button class="phone-button" id="key9" style="top: 526px; left: 158px;"></button>
-
-    <button class="phone-button" id="key*" style="top: 584px; left: 38px;"></button>
-    <button class="phone-button" id="key0" style="top: 584px; left: 98px;"></button>
-    <button class="phone-button" id="key#" style="top: 584px; left: 158px;"></button>
+    <button class="phone-button" id="key1"></button>
+    <button class="phone-button" id="key2"></button>
+    <button class="phone-button" id="key3"></button>
+    <button class="phone-button" id="key4"></button>
+    <button class="phone-button" id="key5"></button>
+    <button class="phone-button" id="key6"></button>
+    <button class="phone-button" id="key7"></button>
+    <button class="phone-button" id="key8"></button>
+    <button class="phone-button" id="key9"></button>
+    <button class="phone-button" id="key*"></button>
+    <button class="phone-button" id="key0"></button>
+    <button class="phone-button" id="key#"></button>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
