--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Sprite animation -->
   <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
 
+  <!-- Flip phone container -->
   <div id="phone-container">
-    <img id="phone-frame" src="images/42.png" alt="Flip Phone Frame" />
+    <!-- src is removed so image does NOT load before animation -->
+    <img id="phone-frame" alt="Flip Phone Frame" />
 
     <!-- Keypad buttons -->
     <button class="phone-button" id="key1"></button>
@@ -30,4 +33,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
