--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sprite animation -->
   <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
 
-  <!-- Flip phone container -->
   <div id="phone-container">
-    <!-- src is removed so image does NOT load before animation -->
+    <!-- DO NOT preload 42.png -->
     <img id="phone-frame" alt="Flip Phone Frame" />
-
-    <!-- Keypad buttons -->
+    
+    <!-- Buttons (no position yet) -->
     <button class="phone-button" id="key1"></button>
     <button class="phone-button" id="key2"></button>
     <button class="phone-button" id="key3"></button>
