--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Flip Phone Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Flip Phone Animation</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
-
   <div id="phone-container">
-    <!-- DO NOT preload 42.png -->
     <img id="phone-frame" alt="Flip Phone Frame" />
-    
-    <!-- Buttons (no position yet) -->
+    <!-- 12 buttons -->
     <button class="phone-button" id="key1"></button>
     <button class="phone-button" id="key2"></button>
     <button class="phone-button" id="key3"></button>
@@ -27,7 +24,6 @@
     <button class="phone-button" id="key0"></button>
     <button class="phone-button" id="key#"></button>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
