--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
   <div id="phone-container">
     <img id="phone-frame" alt="Flip Phone Frame" />
-    <!-- 12 buttons -->
+    <!-- Keypad buttons -->
     <button class="phone-button" id="key1"></button>
     <button class="phone-button" id="key2"></button>
     <button class="phone-button" id="key3"></button>
