--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- Flip phone container (hidden at first) -->
   <div id="phone-container" style="display: none;">
     <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame" />
+    <div id="key-overlay"></div>
   </div>
 
   <script src="script.js"></script>
