--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Sprite animation (loops until click) -->
+  <!-- Sprite animation -->
   <img id="sprite" src="DefineSprite_22/1.png" alt="Loading sprite..." />
 
-  <!-- Flip phone container (hidden at first) -->
+  <!-- Phone interface -->
   <div id="phone-container" style="display: none;">
     <img id="phone-frame" src="images/6.png" alt="Flip Phone Frame" />
+    <div id="flip-trigger"></div>
     <div id="key-overlay"></div>
   </div>
 
